# torch_exid

./: LICENSE  README.md  pyproject.toml
src/torch_exid/: __init__.py  exid.py
tests/: test_basics.py  test_primes.py  test_skip.py
