[tool.poetry]
name = "torch_exid"
version = "0.1.0"
description = ""
authors = ["Artem Legotin <hello@artemlegotin.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
